--- a/package.json
+++ b/package.json
@@ -8,12 +8,7 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push",
-    "test": "vitest",
-    "test:e2e": "playwright test",
-    "test:load": "k6 run tests/load-test.js",
-    "test:coverage": "vitest --coverage",
-    "qa:full": "npm run test && npm run test:e2e && npm run test:load"
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
